[fix] letterDelivery system bug on mobile scrolling

--- a/src/component/customLetter/letterDeliver/index.scss
+++ b/src/component/customLetter/letterDeliver/index.scss
@@ -11,16 +11,16 @@
     rgba(255, 153, 51, 0.15) 76%,
     rgba(255, 153, 51, 0) 100%
   );
-  height: 220vh;
+  height: 400vh;
   padding-top: 8vh;
   padding-bottom: 8vh;
 }
 
 .letter-deliver__scene {
-  position: absolute;
+  position: relative;
   left: 0;
   right: 0;
-  top: 8vh;
+  top: 0;
   z-index: 20;
   width: 100%;
   height: 100vh;
@@ -29,15 +29,15 @@
 .letter-deliver__photo {
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 0;
   transform: translateX(-50%);
   width: min(30vw, 220px);
   aspect-ratio: 3 / 4;
   object-fit: contain;
+  will-change: transform;
 }
 
 .letter-deliver__photo--first {
-  transform: translate(-50%, -50%);
   z-index: 2;
 }
 
